--- a/public/display.html
+++ b/public/display.html
@@ -2,173 +2,183 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13.2+</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Laserpointer Display v4.0 (Pixi v6 + MeshLine)</title>
   <style>
-    body { margin:0; background:black; overflow:hidden }
+    body { margin:0; background:#000; }
     #version {
       position:absolute; top:10px; left:10px;
-      color:white; font-family:sans-serif;
+      color:#fff; font-family:sans-serif;
       font-size:14px; opacity:0.6; z-index:10;
     }
-    canvas { display:block; margin:auto; background:black; }
+    #canvas-container {
+      width:1024px; height:1024px;
+      margin:auto; position:relative;
+      top:50%; transform:translateY(-50%);
+    }
   </style>
 </head>
 <body>
-  <div id="version">v3.13.2+</div>
-  <canvas id="canvas" width="1024" height="1024"></canvas>
+  <div id="version">v4.0 (Pixi v6 + MeshLine)</div>
+  <div id="canvas-container"></div>
 
+  <!-- PixiJS v6 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
+  <!-- pixi-meshline v5 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-meshline/5.4.0/pixi-meshline.umd.js"></script>
+  <!-- Socket.IO Client -->
   <script src="/socket.io/socket.io.js"></script>
+
   <script>
+  window.addEventListener("load", () => {
+    // ─ PIXI
+    const app = new PIXI.Application({
+      width:1024, height:1024,
+      backgroundColor:0x000000,
+      antialias:true,
+      resolution: window.devicePixelRatio||1
+    });
+    document.getElementById("canvas-container").appendChild(app.view);
+    const linesContainer = new PIXI.Container(),
+          pulseGraphics  = new PIXI.Graphics();
+    app.stage.addChild(linesContainer, pulseGraphics);
+
+    // ─ Socket.IO
     const socket = io();
-    // Direkt als Display identifizieren
-    socket.emit("identify", { role:"display", deviceId: socket.id });
+    socket.on("connect", () => {
+      socket.emit("identify",{ role:"display", deviceId:socket.id });
+    });
 
-    const c      = document.getElementById("canvas");
-    const ctx    = c.getContext("2d");
-    const CX     = c.width/2, CY = c.height/2;
+    // ─ Settings vom Admin
+    let MAX_H=20, MAX_V=20, SMOOTH=0.15, MIN_W=5, MAX_W=12;
+    socket.on("updateSettings", cfg => {
+      if (typeof cfg.maxH   === "number") MAX_H  = cfg.maxH;
+      if (typeof cfg.maxV   === "number") MAX_V  = cfg.maxV;
+      if (typeof cfg.minW   === "number") MIN_W  = cfg.minW;
+      if (typeof cfg.maxW   === "number") MAX_W  = cfg.maxW;
+      if (typeof cfg.smooth === "number") SMOOTH = cfg.smooth;
+    });
 
-    // Default-Settings (werden per Admin überschrieben)
-    let MAX_H   = 20, MAX_V   = 20, MIN_W   = 5,
-        MAX_W   = 12, SMOOTH  = 0.15,
-        SPEED_THRESHOLD = 2000;
-
-    // State-Maps
-    const alpha0    = {}, beta0     = {},
-          rawPos    = {}, lastTime  = {},
-          lastWidth = {}, lastCol   = {},
-          lastLight = {}, segments  = {};
-
-    function parseLight(hsl) {
+    // ─ State pro Gerät
+    const state = {};
+    function parseLight(hsl){
       const m = hsl.match(/,\s*(\d+)%\)/);
-      return m ? +m[1] : 50;
+      return m?+m[1]:50;
     }
 
-    ctx.lineCap  = "round";
-    ctx.lineJoin = "round";
-
-    // Admin-Updates empfangen
-    socket.on("updateSettings", cfg => {
-      if (typeof cfg.maxH   === "number") MAX_H   = cfg.maxH;
-      if (typeof cfg.maxV   === "number") MAX_V   = cfg.maxV;
-      if (typeof cfg.minW   === "number") MIN_W   = cfg.minW;
-      if (typeof cfg.maxW   === "number") MAX_W   = cfg.maxW;
-      if (typeof cfg.smooth === "number") SMOOTH  = cfg.smooth;
-      console.log("Settings:", cfg);
-    });
-
-    // Farbwechsel-Event sofort für Puls-Punkt übernehmen
-    socket.on("color-change", ({ deviceId, color }) => {
-      if (deviceId in lastCol) {
-        lastCol[deviceId]   = color;
-        lastLight[deviceId] = parseLight(color);
-      }
-    });
-
-    // Canvas leeren
+    // ─ Clear
     socket.on("clear", () => {
-      ctx.clearRect(0,0,c.width,c.height);
-      for (let id in segments) segments[id] = [];
+      linesContainer.removeChildren();
+      pulseGraphics.clear();
+      for(let id in state) delete state[id];
     });
 
-    // Bewegungsdaten empfangen
-    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha!=="number" || typeof beta!=="number") return;
-      const now = performance.now();
+    // ─ Motion
+    socket.on("motion", ({alpha,beta,color,isDrawing,deviceId}) => {
+      if (typeof alpha!=="number" || !deviceId) return;
+      const now = performance.now(), CX=app.renderer.width/2, CY=app.renderer.height/2;
 
-      // Initial-State anlegen
-      if (!(deviceId in rawPos)) {
-        rawPos[deviceId]   = { x:CX, y:CY };
-        lastTime[deviceId] = now;
-        lastWidth[deviceId]= (MIN_W+MAX_W)/2;
-        segments[deviceId] = [];
-        alpha0[deviceId]   = null;
-        beta0 [deviceId]   = null;
+      let s = state[deviceId];
+      if (!s) {
+        s = state[deviceId] = {
+          alpha0:null,
+          beta0: null,
+          smooth:{x:CX,y:CY,t:now},
+          lastW:(MIN_W+MAX_W)/2,
+          meshLine: new PIXI.MeshLine(),
+          material:null,
+          mesh:null,
+          lastColor: color,
+          lastLight: parseLight(color)
+        };
       }
 
-      // Kalibrierung beim ersten Draw
-      if (isDrawing && alpha0[deviceId]===null) {
-        alpha0[deviceId] = alpha;
-        beta0 [deviceId] = beta;
-      }
-      if (alpha0[deviceId]===null) return;
+      // Update Farbe
+      s.lastColor = color;
+      s.lastLight = parseLight(color);
 
-      // Winkel-Delta + Wrap
-      let dA = alpha - alpha0[deviceId];
+      // Calibrate
+      if (isDrawing && s.alpha0===null) {
+        s.alpha0 = alpha;
+        s.beta0  = beta;
+      }
+      if (s.alpha0===null) return;
+
+      // Delta+Wrap
+      let dA = alpha - s.alpha0;
       if (dA>180)  dA-=360;
       if (dA<-180) dA+=360;
-      let dB = beta - beta0[deviceId];
-
+      let dB = beta - s.beta0;
       dA = Math.max(-MAX_H,Math.min(MAX_H,dA));
       dB = Math.max(-MAX_V,Math.min(MAX_V,dB));
 
-      // Auf Canvas mappen
-      const x = CX - (dA/MAX_H)*CX;
-      const y = CY - (dB/MAX_V)*CY;
+      // Map to canvas
+      const x = CX - (dA/MAX_H)*CX,
+            y = CY - (dB/MAX_V)*CY;
 
-      // Geschwindigkeit
-      const prev = rawPos[deviceId];
-      const dt   = (now - lastTime[deviceId]) / 1000;
-      const dist = Math.hypot(x-prev.x, y-prev.y);
-      const speed= dt>0 ? dist/dt : 0;
-      lastTime[deviceId] = now;
+      // Smooth
+      s.smooth.x += (x - s.smooth.x)*SMOOTH;
+      s.smooth.y += (y - s.smooth.y)*SMOOTH;
 
-      // Segment speichern
+      // Speed→Width
+      const dt    = (now - s.smooth.t)/1000,
+            dx    = s.smooth.x - (s.prevX||s.smooth.x),
+            dy    = s.smooth.y - (s.prevY||s.smooth.y),
+            speed = dt>0?Math.hypot(dx,dy)/dt:0;
+      s.smooth.t = now;
+      s.prevX    = s.smooth.x;
+      s.prevY    = s.smooth.y;
+
       if (isDrawing) {
-        const norm = Math.min(1, speed/SPEED_THRESHOLD);
-        const rawW = MAX_W - (MAX_W-MIN_W)*norm;
-        const w    = lastWidth[deviceId] + (rawW - lastWidth[deviceId])*0.3;
-        lastWidth[deviceId] = w;
-        lastCol[deviceId]   = color;
-        lastLight[deviceId] = parseLight(color);
+        const norm = Math.min(1,speed/2000),
+              w2   = MAX_W - (MAX_W-MIN_W)*norm,
+              w1   = s.lastW;
+        s.lastW = w2;
 
-        segments[deviceId].push({ x1: prev.x, y1: prev.y, x2: x, y2: y, w, color });
+        if (!s.material) {
+          const colHex = PIXI.utils.string2hex(s.lastColor);
+          s.material = new PIXI.MeshLineMaterial({
+            color: colHex,
+            lineWidth: w2,
+            resolution: { x:1024, y:1024 }
+          });
+          s.mesh = new PIXI.Mesh(s.meshLine, s.material);
+          linesContainer.addChild(s.mesh);
+        }
+        const pts    = (s.meshLine.points||[]).concat([s.smooth.x, s.smooth.y]);
+        const widths = (s.meshLine.widths||[]).concat([w1, w2]);
+        s.meshLine.setPoints(pts,false,widths);
+        s.material.uniforms.lineWidth = w2;
       }
-      rawPos[deviceId] = { x, y };
     });
 
-    // Render-Loop mit Puls-Punkt
-    let pulse = 0, grow = true;
-    (function loop(){
-      ctx.clearRect(0,0,c.width,c.height);
-
-      // alle Segmente zeichnen
-      for (let id in segments) {
-        for (let s of segments[id]) {
-          ctx.strokeStyle = s.color;
-          ctx.lineWidth   = s.w;
-          ctx.beginPath();
-          ctx.moveTo(s.x1, s.y1);
-          ctx.lineTo(s.x2, s.y2);
-          ctx.stroke();
-        }
-      }
-
-      // Puls
+    // ─ Puls-Loop
+    let pulse=0, grow=true;
+    app.ticker.add(() => {
       pulse += grow?0.2:-0.2;
-      if (pulse > 2) grow = false;
-      if (pulse < 0) grow = true;
+      if (pulse>2) grow=false;
+      if (pulse<0) grow=true;
 
-      // Puls-Punkt
-      for (let id in rawPos) {
-        const { x, y } = rawPos[id];
-        const last = segments[id].slice(-1)[0];
-        const r    = (last? last.w : (MIN_W+MAX_W)/2)/2 + pulse;
-        ctx.fillStyle = last? last.color : "#f00";
-        ctx.beginPath();
-        ctx.arc(x, y, r, 0, Math.PI*2);
-        ctx.fill();
-        if ((lastLight[id]||50) < 20) {
-          ctx.lineWidth   = 3;
-          ctx.strokeStyle = "#fff";
-          ctx.beginPath();
-          ctx.arc(x, y, r+3, 0, Math.PI*2);
-          ctx.stroke();
+      pulseGraphics.clear();
+      for (let id in state) {
+        const s    = state[id],
+              col  = PIXI.utils.string2hex(s.lastColor),
+              light= s.lastLight,
+              r    = s.lastW/2 + pulse;
+
+        // Pulsierender Punkt
+        pulseGraphics.beginFill(col);
+        pulseGraphics.drawCircle(s.smooth.x, s.smooth.y, r);
+        pulseGraphics.endFill();
+
+        if (light<20) {
+          pulseGraphics.lineStyle(3,0xffffff);
+          pulseGraphics.drawCircle(s.smooth.x, s.smooth.y, r+3);
         }
       }
+    });
 
-      requestAnimationFrame(loop);
-    })();
+  });
   </script>
 </body>
 </html>
