--- a/public/control.html
+++ b/public/control.html
@@ -3,136 +3,222 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.3</title>
+  <title>Laserpointer Control v3.11</title>
   <style>
+    /* Keine Touch-Selection oder Callouts */
+    *, button {
+      -webkit-touch-callout: none;
+      -webkit-user-select:   none;
+      -moz-user-select:      none;
+      -ms-user-select:       none;
+      user-select:           none;
+    }
     body {
       margin: 0;
-      background: #111;
-      color: white;
+      padding: 20px;
+      background: #000;
+      color: #fff;
       font-family: sans-serif;
-      overflow: hidden;
-    }
-    #colorPicker {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      max-width: 80vw;
-    }
-    .colorBtn {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      border: none;
-    }
-    #laserBtn {
-      position: absolute;
-      bottom: 60px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 80px;
-      height: 80px;
-      background: white;
-      border-radius: 50%;
-      border: none;
-      touch-action: none;
     }
     .version {
       position: absolute;
       top: 10px;
-      right: 20px;
+      right: 10px;
       font-size: 14px;
+      opacity: 0.7;
+    }
+    .setting {
+      margin: 20px 0;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    input[type="range"] {
+      -webkit-appearance: none;
+      width: 80%;
+      height: 20px;
+      border-radius: 10px;
+      background: transparent;
+      cursor: pointer;
+    }
+    input[type="range"]::-webkit-slider-runnable-track {
+      height: 20px;
+      border-radius: 10px;
+    }
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 24px; height: 24px;
+      margin-top: -2px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
+    }
+    input[type="range"]::-moz-range-track {
+      height: 20px;
+      border-radius: 10px;
+    }
+    input[type="range"]::-moz-range-thumb {
+      width: 24px; height: 24px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
+    }
+    .value {
+      width: 50px;
+      text-align: right;
+      font-size: 1rem;
+    }
+    #preview {
+      width: 40px;
+      height: 40px;
+      border: 2px solid #fff;
+      box-sizing: border-box;
+      background: hsl(0,100%,50%);
+    }
+    #laserBtn {
+      position: absolute;
+      bottom: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: #fff;
+      border: none;
+      touch-action: none;
+    }
+    /* Button zum Anfordern der Permission */
+    #permBtn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 12px 20px;
+      font-size: 16px;
+      z-index: 1000;
     }
   </style>
 </head>
 <body>
-  <div id="colorPicker"></div>
+  <!-- Gyro-Permission -->
+  <button id="permBtn">Gyro freigeben</button>
+
+  <div class="version">v3.11</div>
+
+  <div class="setting">
+    <input id="hue" type="range" min="0" max="360" value="0"/>
+    <span id="hueVal" class="value">0°</span>
+  </div>
+
+  <div class="setting">
+    <input id="intensity" type="range" min="0" max="100" value="50"/>
+    <span id="intVal" class="value">50 %</span>
+    <div id="preview"></div>
+  </div>
+
   <button id="laserBtn"></button>
-  <div class="version">v3.3</div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket    = io();
-    // Direkt als Control identifizieren
-    socket.emit("identify", { role: "control", deviceId: socket.id });
+    const socket = io();
+    // Persistente Geräte-ID
+    let deviceId = localStorage.getItem("deviceId");
+    if (!deviceId) {
+      deviceId = crypto.randomUUID();
+      localStorage.setItem("deviceId", deviceId);
+    }
+    socket.emit("identify", { role: "control", deviceId });
 
-    let isPressed   = false;
-    let justStarted = false;
-    let color       = 'red';
+    const permBtn   = document.getElementById("permBtn");
+    const hueSlider = document.getElementById("hue");
+    const hueVal    = document.getElementById("hueVal");
+    const intSlider = document.getElementById("intensity");
+    const intVal    = document.getElementById("intVal");
+    const preview   = document.getElementById("preview");
+    const laserBtn  = document.getElementById("laserBtn");
 
-    // Farben definieren
-    const colors = ['red','orange','yellow','green','blue','cyan','magenta','pink','white','gray'];
-    const picker = document.getElementById("colorPicker");
+    let isDrawing = false;
+    let hue       = 0;
+    let intensity = 50;
+    let colorHSL  = `hsl(0,100%,50%)`;
 
-    colors.forEach(c => {
-      const btn = document.createElement("button");
-      btn.className = "colorBtn";
-      btn.style.backgroundColor = c;
-      btn.addEventListener("click", () => {
-        color = c;
-        // Sofortiges Broadcasten des Farbwechsels
-        socket.emit("color-change", { deviceId: socket.id, color });
-      });
-      picker.appendChild(btn);
+    // Gyro-Permission anfordern
+    permBtn.addEventListener("click", async () => {
+      if (typeof DeviceOrientationEvent.requestPermission === "function") {
+        try {
+          const res = await DeviceOrientationEvent.requestPermission();
+          if (res === "granted") {
+            initGyro();
+            permBtn.style.display = "none";
+          } else {
+            alert("Gyro-Zugriff verweigert");
+          }
+        } catch (err) {
+          console.error(err);
+        }
+      } else {
+        initGyro();
+        permBtn.style.display = "none";
+      }
     });
 
-    const laserBtn = document.getElementById("laserBtn");
-
-    function handleDraw(x, y) {
-      socket.emit("draw", {
-        x,
-        y,
-        color,
-        isStart: justStarted
-      });
-      justStarted = false;
+    function initGyro() {
+      window.addEventListener("deviceorientation", sendOri);
     }
+
+    function sendOri(e) {
+      if (e.alpha == null || e.beta == null) return;
+      socket.emit("motion", {
+        alpha:      e.alpha,
+        beta:       e.beta,
+        color:      colorHSL,
+        isDrawing,
+        deviceId
+      });
+    }
+
+    // Slider-Hintergründe
+    function setHueBackground() {
+      hueSlider.style.background =
+        "linear-gradient(to right, " +
+        "hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%), " +
+        "hsl(180,100%,50%), hsl(240,100%,50%), hsl(300,100%,50%), hsl(360,100%,50%)" +
+        ")";
+    }
+    function setIntensityBackground() {
+      const mid = `hsl(${hue},100%,50%)`;
+      intSlider.style.background =
+        `linear-gradient(to right, black, ${mid}, white)`;
+    }
+
+    function updateColor() {
+      hue       = +hueSlider.value;
+      intensity = +intSlider.value;
+      hueVal.textContent = hue + "°";
+      intVal.textContent = intensity + " %";
+      colorHSL = `hsl(${hue},100%,${intensity}%)`;
+      preview.style.background = colorHSL;
+      setIntensityBackground();
+    }
+
+    setHueBackground();
+    setIntensityBackground();
+    updateColor();
+
+    hueSlider.addEventListener("input", updateColor);
+    intSlider.addEventListener("input", updateColor);
 
     laserBtn.addEventListener("touchstart", e => {
       e.preventDefault();
-      isPressed   = true;
-      justStarted = true;
+      isDrawing = true;
     });
     laserBtn.addEventListener("touchend", e => {
       e.preventDefault();
-      isPressed   = false;
+      isDrawing = false;
     });
 
-    // Gyro-Bewegung
-    let zeroAlpha = null, zeroBeta = null;
-    const maxAngle = 20;
-    window.addEventListener("deviceorientation", ev => {
-      if (!isPressed) return;
-      if (zeroAlpha === null) {
-        zeroAlpha = ev.alpha;
-        zeroBeta  = ev.beta;
-      }
-      let dA = ev.alpha - zeroAlpha;
-      if      (dA > 180)  dA -= 360;
-      else if (dA < -180) dA += 360;
-      let dB = ev.beta - zeroBeta;
-
-      dA = Math.max(-maxAngle, Math.min(maxAngle, dA));
-      dB = Math.max(-maxAngle, Math.min(maxAngle, dB));
-
-      const canvasX = (-dA + maxAngle) / (2*maxAngle) * 1024;
-      const canvasY = (-dB + maxAngle) / (2*maxAngle) * 1024;
-      handleDraw(canvasX, canvasY);
-    });
-
-    // iOS-Permission
-    window.addEventListener("click", async () => {
-      if (typeof DeviceOrientationEvent.requestPermission === "function") {
-        try {
-          const resp = await DeviceOrientationEvent.requestPermission();
-          if (resp === "granted") console.log("Gyro OK");
-        } catch(err) {
-          console.error(err);
-        }
-      }
-    });
+    // Kontextmenü unterdrücken
+    document.addEventListener("contextmenu", e => e.preventDefault());
   </script>
 </body>
 </html>
